@@ -643,9 +643,27 @@ public class DeltavisionReader extends FormatReader {
         }
       }
 
-      store.setPixelsPhysicalSizeX(new PositiveFloat(new Double(pixX)), series);
-      store.setPixelsPhysicalSizeY(new PositiveFloat(new Double(pixY)), series);
-      store.setPixelsPhysicalSizeZ(new PositiveFloat(new Double(pixZ)), series);
+      if (pixX > 0) {
+        Double x = new Double(pixX);
+        store.setPixelsPhysicalSizeX(new PositiveFloat(x), series);
+      }
+      else {
+        LOGGER.warn("Expected positive value for PhysicalSizeX; got {}", pixX);
+      }
+      if (pixY > 0) {
+        Double y = new Double(pixY);
+        store.setPixelsPhysicalSizeY(new PositiveFloat(y), series);
+      }
+      else {
+        LOGGER.warn("Expected positive value for PhysicalSizeY; got {}", pixY);
+      }
+      if (pixZ > 0) {
+        Double z = new Double(pixZ);
+        store.setPixelsPhysicalSizeZ(new PositiveFloat(z), series);
+      }
+      else {
+        LOGGER.warn("Expected positive value for PhysicalSizeZ; got {}", pixZ);
+      }
 
       store.setImageDescription(imageDesc, series);
     }
@@ -683,9 +701,17 @@ public class DeltavisionReader extends FormatReader {
           store.setChannelEmissionWavelength(
             new PositiveInteger((int) waves[w]), series, w);
         }
+        else {
+          LOGGER.warn("Expected positive value for EmissionWavelength; got {}",
+            waves[w]);
+        }
         if ((int) hdrC.exWavelen > 0) {
           store.setChannelExcitationWavelength(
             new PositiveInteger((int) hdrC.exWavelen), series, w);
+        }
+        else {
+          LOGGER.warn("Expected positive alue for ExcitationWavelength; got {}",
+            hdrC.exWavelen);
         }
         if (ndFilters[w] == null) ndFilters[w] = new Double(hdrC.ndFilter);
         store.setChannelNDFilter(ndFilters[w], series, w);
@@ -878,8 +904,16 @@ public class DeltavisionReader extends FormatReader {
             }
 
             try {
-              store.setObjectiveNominalMagnification(
-                PositiveInteger.valueOf(magnification), 0, 0);
+              Integer mag = new Integer(magnification);
+              if (mag > 0) {
+                store.setObjectiveNominalMagnification(
+                  new PositiveInteger(mag), 0, 0);
+              }
+              else {
+                LOGGER.warn(
+                  "Expected positive value for NominalMagnification; got {}",
+                  mag);
+              }
             }
             catch (NumberFormatException e) {
               LOGGER.warn("Could not parse magnification '{}'", magnification);
@@ -921,6 +955,11 @@ public class DeltavisionReader extends FormatReader {
             catch (NumberFormatException e) {
               LOGGER.warn("Could not parse pixel size '{}'",
                 pixelSizes[q].trim());
+            }
+            if (size == null || size <= 0) {
+              LOGGER.warn("Expected positive value for PhysicalSize; got {}",
+                size);
+              continue;
             }
             if (q == 0) {
               for (int series=0; series<getSeriesCount(); series++) {
@@ -2119,6 +2158,10 @@ public class DeltavisionReader extends FormatReader {
     if (magnification > 0) {
       store.setObjectiveNominalMagnification(
         new PositiveInteger(magnification), 0, 0);
+    }
+    else {
+      LOGGER.warn("Expected positive value for NominalMagnification; got {}",
+        magnification);
     }
     if (calibratedMagnification != null) {
       store.setObjectiveCalibratedMagnification(calibratedMagnification, 0, 0);
